Onboarding exercise. I made some changes to the hello app and also added some survey 'functionality' to get familiar with canisters and rust.

--- a/rust/hello/package.json
+++ b/rust/hello/package.json
@@ -36,5 +36,8 @@
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ]
+  ],
+  "dependencies": {
+    "copy-webpack-plugin": "^11.0.0"
+  }
 }
